@@ -1,4 +1,4 @@
-JalaliJSCalendar v1.1 (Stable Release)
+JalaliJSCalendar v1.1.5
 -------------------
   Author: Ali Farhadi (http://farhadi.ir/)
   Released under the terms of the GNU Public License.
